--- a/spec/hott_macros.tex
+++ b/spec/hott_macros.tex
@@ -18,6 +18,12 @@
 
 %%% Vec (for example)
 
+\renewcommand{\max}{\ensuremath{\mathsf{max}}}
+\newcommand{\imax}{\ensuremath{\mathsf{imax}}}
+\DeclareMathOperator{\Sort}{\mathsf{Sort}}
+\newcommand{\Prop}{\mathsf{Prop}}
+\newcommand{\Type}{\mathsf{Type}}
+
 \newcommand{\Vect}{\ensuremath{\mathsf{Vec}}}
 \newcommand{\Fin}{\ensuremath{\mathsf{Fin}}}
 \newcommand{\fmax}{\ensuremath{\mathsf{fmax}}}
