--- a/spec/hott_macros.tex
+++ b/spec/hott_macros.tex
@@ -23,6 +23,7 @@
 \DeclareMathOperator{\Sort}{\mathsf{Sort}}
 \newcommand{\Prop}{\mathsf{Prop}}
 \newcommand{\Type}{\mathsf{Type}}
+\newcommand{\Region}{\mathsf{Region}}
 
 \newcommand{\Vect}{\ensuremath{\mathsf{Vec}}}
 \newcommand{\Fin}{\ensuremath{\mathsf{Fin}}}
