--- a/spec/spec.tex
+++ b/spec/spec.tex
@@ -5,6 +5,7 @@
 \usepackage{parskip}
 \usepackage{makecell}
 \usepackage{microtype}
+\usepackage{bm}
 \usepackage[pdfa]{hyperref}
 \hypersetup{colorlinks=true, linktoc=all}
 \usepackage[style=numeric]{biblatex}
