--- a/spec/feather/types_and_values.tex
+++ b/spec/feather/types_and_values.tex
@@ -279,3 +279,8 @@ The corresponding rewrite rule is called \( \ast \)-reduction (read `dereference
 \[ \inferrule
 	{\oftp{\Gamma}{\rho_1}{\Region} \and \oftp{\Gamma}{\rho_2}{\Region} \and \oftp\Gamma{x}{\Delta_{\rho_2}\,\alpha}}
 	{\ast\,\&_{\rho_1}\,x \;\triangleright_\ast\; x} \]
+
+\section{Weak head normal form}
+
+\section{Definitional equality checker}
+
